--- a/src/main/resources/assets/gd656killicon/lang/en_us.json
+++ b/src/main/resources/assets/gd656killicon/lang/en_us.json
@@ -1,5 +1,5 @@
 {
-  "gd656killicon.client.command.info": "Current GD656Killicon Client Version: ",
+  "gd656killicon.client.command.info": "Current GD656Killicon Client Version: %s",
   "gd656killicon.prefix": "[656] ",
   "gd656killicon.server.prefix": "[656-Server] ",
 
@@ -98,6 +98,7 @@
 
   "gd656killicon.client.gui.config.title": "GD656Killicon Control Panel",
   "gd656killicon.client.gui.config.subtitle": "By Minecraft_GD656",
+  "gd656killicon.client.gui.choice.select": "Select",
   "gd656killicon.client.gui.config.tab.home": "Home",
   "gd656killicon.client.gui.config.tab.home.subtitle": "Mod Configuration Home",
   "gd656killicon.client.gui.hometab.title": "§lGD656Killicon",
@@ -233,7 +234,11 @@
   "gd656killicon.client.gui.config.generic.display_duration": "Display Duration",
   "gd656killicon.client.gui.config.generic.display_interval_ms": "Display Interval (ms)",
   "gd656killicon.client.gui.config.generic.dynamic_card_style": "Dynamically change card style based on team color",
-  "gd656killicon.client.gui.config.generic.texture_style": "Texture Style",
+  "gd656killicon.client.gui.config.generic.texture_style": "Official Texture Select",
+  "gd656killicon.client.gui.config.generic.official_texture_select": "Official Texture Select",
+  "gd656killicon.client.gui.config.generic.custom_texture_select": "Custom Texture Select",
+  "gd656killicon.client.gui.config.generic.texture_select_mode": "Texture Select Mode",
+  "gd656killicon.client.gui.config.generic.vanilla_texture_select": "Vanilla Texture Select",
   "gd656killicon.client.gui.config.generic.enable_digital_scroll": "Enable Digital Scrolling",
   "gd656killicon.client.gui.config.generic.enable_flash": "Enable Flashing",
   "gd656killicon.client.gui.config.generic.enable_glow_effect": "Enable Glow Effect",
@@ -395,12 +400,14 @@
   "gd656killicon.client.gui.config.global.enable_sound.desc": "If enabled, specific sounds will play when kill icons appear.",
   "gd656killicon.client.gui.config.global.sound_volume": "Sound Volume",
   "gd656killicon.client.gui.config.global.sound_volume.desc": "Set the mod sound volume (0~200).",
+  "gd656killicon.client.gui.config.global.disable_tacz_kill_sound": "Disable TACZ Kill Sound",
+  "gd656killicon.client.gui.config.global.disable_tacz_kill_sound.desc": "If enabled, TACZ kill sounds will be suppressed.",
   "gd656killicon.client.gui.config.global.enable_bonus_message": "Enable Bonus Messages",
   "gd656killicon.client.gui.config.global.enable_bonus_message.desc": "If enabled, when a bonus (e.g., headshot, assist) is triggered, detailed information will be shown in the chat.",
   "gd656killicon.client.gui.config.global.enable_ace_lag": "Enable ACE Lag Simulation",
   "gd656killicon.client.gui.config.global.enable_ace_lag.desc": "If enabled, simulates lag (FPS drop, brief freeze) during intense combat.",
   "gd656killicon.client.gui.config.global.ace_lag_intensity": "ACE Lag Intensity",
-  "gd656killicon.client.gui.config.global.ace_lag_intensity.desc": "Set the intensity and frequency of lag simulation (1-10). Higher values mean more frequent and severe lag.",
+  "gd656killicon.client.gui.config.global.ace_lag_intensity.desc": "Set the intensity and frequency of lag simulation (1-100). Higher values mean more frequent and severe lag.",
   "gd656killicon.client.gui.config.preset.create_new": "Create New Custom Preset",
   "gd656killicon.client.gui.config.preset.enter_edit_mode": "Enter Preset Edit Mode",
   "gd656killicon.client.gui.config.preset.exit_edit_mode": "Exit Preset Edit Mode",
@@ -446,6 +453,19 @@
   "gd656killicon.client.gui.prompt.warning": "Warning",
   "gd656killicon.client.gui.prompt.info": "Info",
   "gd656killicon.client.gui.prompt.language_changed": "Detected a client language change. Consider resetting text format configuration items.",
+  "gd656killicon.client.gui.prompt.ace_lag_confirm": "High values may make the game unplayable. Confirm the change?",
+  "gd656killicon.client.gui.prompt.config_intro_1": "Thanks for installing GD656Killicon. Tips will guide you as you go.",
+  "gd656killicon.client.gui.prompt.config_intro_2": "Use the top tabs to switch quickly. Icon settings are in “Preset Elements”.",
+  "gd656killicon.client.gui.prompt.config_intro_3": "This is the home page: check integrations and install status, and use the bottom-right links to open websites.",
+  "gd656killicon.client.gui.prompt.preset_intro": "This is the preset elements page. Open the left preset panel or the right element panel to configure items and sounds.",
+  "gd656killicon.client.gui.prompt.element_intro": "This is the element config page. Left preview updates live; right side adjusts multiple settings.",
+  "gd656killicon.client.gui.prompt.element_texture_intro": "For non-subtitle elements, use the upper-right sub-tabs and drop PNG/GIF to customize textures or animations.",
+  "gd656killicon.client.gui.prompt.sound_intro": "This is the sound configuration page. Select a sound to preview it or click the gray file name to change audio.",
+  "gd656killicon.client.gui.prompt.sound_select_intro": "Please choose an official sound or drag an OGG or WAV file into the game window to customize audio.",
+  "gd656killicon.client.gui.prompt.version_updated": "GD656Killicon has been upgraded to\n%s",
+  "gd656killicon.client.gui.prompt.version_confirm": "Confirm Update",
+  "gd656killicon.client.gui.prompt.version_view": "View Changelog",
+  "gd656killicon.client.gui.prompt.scoreboard_intro": "This is the scoreboard page: left records career stats, right shows server scores and KDA. Click header L/R to sort.",
   "gd656killicon.client.gui.prompt.error": "Error",
   "gd656killicon.client.gui.prompt.success": "Success",
   "gd656killicon.client.gui.prompt.sound_replace_success": "Sound replaced successfully",
@@ -460,6 +480,8 @@
   "gd656killicon.client.gui.prompt.gif_convert_fail": "GIF conversion failed",
 
   "gd656killicon.client.command.create_success": "Preset %s created",
+  "gd656killicon.client.command.iamanew": "New user mode enabled. Tips will show again.",
+  "gd656killicon.client.command.versionset": "Recorded mod version set to %s",
   "gd656killicon.client.command.global_config_invalid_key": "Invalid global config key: %s",
   "gd656killicon.client.command.global_config_invalid_value": "Invalid config value: %s",
   "gd656killicon.client.command.global_config_updated": "Global config updated: %s = %s",
@@ -584,6 +606,40 @@
   "gd656killicon.client.sound.reset_progress": "Resetting sounds (%d/%d)",
   "gd656killicon.client.sound.reset_start": "Starting asynchronous sound reset...",
   "gd656killicon.client.sound.reset_success": "Sounds for preset %s reset",
+  "gd656killicon.client.gui.config.sound.group.common": "General Sounds",
+  "gd656killicon.client.gui.config.sound.group.scrolling": "Scrolling Kill Icon Sounds",
+  "gd656killicon.client.gui.config.sound.group.battlefield1": "Battlefield 1 Kill Icon Sounds",
+  "gd656killicon.client.gui.config.sound.group.card": "Card Kill Icon Sounds",
+  "gd656killicon.client.gui.config.sound.group.combo": "Combo Kill Icon Sounds",
+  "gd656killicon.client.gui.config.sound.select.title": "Sound Selection",
+  "gd656killicon.client.gui.config.sound.select.subtitle": "Please select a sound to modify",
+  "gd656killicon.client.gui.config.sound.select": "Select",
+  "gd656killicon.client.gui.config.sound.select.selected": "Selected",
+  "gd656killicon.client.gui.config.sound.select.hover": "Click to select sound",
+  "gd656killicon.client.gui.config.sound.select.group.official": "Official Audio",
+  "gd656killicon.client.gui.config.sound.select.group.custom": "Custom Audio",
+  "gd656killicon.client.gui.config.sound.reset_current": "Reset current sound to default",
+  "gd656killicon.client.gui.config.sound.subgroup.common.score": "Score Sounds",
+  "gd656killicon.client.gui.config.sound.subgroup.common.hit": "Hit Sounds",
+  "gd656killicon.client.gui.config.sound.subgroup.scrolling.default": "Default Sounds",
+  "gd656killicon.client.gui.config.sound.subgroup.scrolling.headshot": "Headshot Sounds",
+  "gd656killicon.client.gui.config.sound.subgroup.scrolling.explosion": "Explosion Sounds",
+  "gd656killicon.client.gui.config.sound.subgroup.scrolling.crit": "Critical Sounds",
+  "gd656killicon.client.gui.config.sound.subgroup.scrolling.vehicle": "Vehicle Destroy Sounds",
+  "gd656killicon.client.gui.config.sound.subgroup.scrolling.assist": "Assist Sounds",
+  "gd656killicon.client.gui.config.sound.subgroup.bf1.default": "Default Sounds",
+  "gd656killicon.client.gui.config.sound.subgroup.bf1.headshot": "Headshot Sounds",
+  "gd656killicon.client.gui.config.sound.subgroup.card.default": "Default Sounds",
+  "gd656killicon.client.gui.config.sound.subgroup.card.headshot": "Headshot Sounds",
+  "gd656killicon.client.gui.config.sound.subgroup.card.explosion": "Explosion Sounds",
+  "gd656killicon.client.gui.config.sound.subgroup.card.crit": "Critical Sounds",
+  "gd656killicon.client.gui.config.sound.subgroup.card.armor_headshot": "Armor Headshot Sounds",
+  "gd656killicon.client.gui.config.sound.subgroup.combo.1": "Combo 1",
+  "gd656killicon.client.gui.config.sound.subgroup.combo.2": "Combo 2",
+  "gd656killicon.client.gui.config.sound.subgroup.combo.3": "Combo 3",
+  "gd656killicon.client.gui.config.sound.subgroup.combo.4": "Combo 4",
+  "gd656killicon.client.gui.config.sound.subgroup.combo.5": "Combo 5",
+  "gd656killicon.client.gui.config.sound.subgroup.combo.6": "Combo 6",
 
   "gd656killicon.client.texture.reload_progress": "Loading textures (%d/%d)",
   "gd656killicon.client.texture.reload_start": "Starting asynchronous texture reload...",
@@ -651,7 +707,18 @@
   "gd656killicon.config.desc.combo_reset_timeout": "When 'Custom Duration' is selected, the streak resets after this many seconds without a kill/assist.",
   "gd656killicon.config.desc.enable_bold": "Enable bold text rendering.",
   "gd656killicon.config.desc.enable_light_effect": "Enable a light sweep effect when subtitles enter.",
-  "gd656killicon.config.desc.texture_style": "Select the default texture for this texture tab.",
+  "gd656killicon.config.desc.texture_style": "Select the official texture file used in this tab.",
+  "gd656killicon.config.desc.official_texture_select": "Select the official texture file used in this tab.",
+  "gd656killicon.config.desc.custom_texture_select": "Select the custom texture file used in this tab.",
+  "gd656killicon.config.desc.texture_select_mode": "Choose which texture source to use.",
+  "gd656killicon.config.desc.vanilla_texture_select": "Select a vanilla item texture.",
+  "gd656killicon.config.choice.texture_mode.custom": "Custom Texture",
+  "gd656killicon.config.choice.texture_mode.official": "Official Texture",
+  "gd656killicon.config.choice.texture_mode.vanilla": "Vanilla Texture",
+  "gd656killicon.client.gui.config.choice.custom_texture_none": "No Custom Textures",
+  "gd656killicon.client.gui.prompt.texture_binding_png": "Texture binding changed. Reset animation settings?",
+  "gd656killicon.client.gui.prompt.texture_binding_gif": "Texture binding changed. Reconfigure animation settings?",
+  "gd656killicon.client.gui.prompt.texture_unavailable": "This texture is temporarily unavailable.",
   "gd656killicon.config.desc.color_normal_text": "Set the color for regular (non-placeholder) text in subtitles.",
 
   "gd656killicon.client.gui.help.category.commands": "Server Commands",
@@ -696,7 +763,9 @@
   "gd656killicon.client.gui.help.preset.create": "Creating a Custom Preset",
   "gd656killicon.client.gui.help.preset.create.desc": "Click the 'Create New Custom Preset' button at the bottom of the list. The system will automatically generate a new preset ID and select it. You can then personalize it.",
   "gd656killicon.client.gui.help.preset.edit": "Editing Presets and Elements",
-  "gd656killicon.client.gui.help.preset.edit.desc": "Click 'Enter Preset Edit Mode':\n1. For custom presets: Hover over the ID to choose Edit ID or Delete Preset; hover over the name to choose Rename.\n2. For official presets: Hover over the ID to choose Reset Config, Reset Textures, or Reset Sounds.\n\nElement Management (Right Panel):\nHover over the right edge of the screen to reveal the element control panel. Click the 'Add' button to add new elements (e.g., kill icons, subtitles) to the current preset. After adding, double-click the element preview or click the configure button to enter the element configuration screen. In the secondary tab, select a texture and drag your own PNG file or GIF animation directly into this window to customize textures. Click 'Configure Sound' to manage custom sounds for the current preset; sounds only support WAV and OGG formats.",
+  "gd656killicon.client.gui.help.preset.edit.desc": "Click 'Enter Preset Edit Mode':\n1. For custom presets: Hover over the ID to choose Edit ID or Delete Preset; hover over the name to choose Rename.\n2. For official presets: Hover over the ID to choose Reset Config, Reset Textures, or Reset Sounds.\n\nElement Management (Right Panel):\nHover over the right edge of the screen to reveal the element control panel. Click the 'Add' button to add new elements (e.g., kill icons, subtitles) to the current preset. After adding, double-click the element preview or click the configure button to enter the element configuration screen. In the secondary tab, select a texture and drag your own PNG file or GIF animation directly into this window to customize textures. Click 'Configure Sound' to open the sound list, then click a sound row to enter the selection page; drag WAV/OGG files in that page to add custom audio and click Select to apply.",
+  "gd656killicon.client.gui.help.preset.texture_select_mode": "Texture Selection",
+  "gd656killicon.client.gui.help.preset.texture_select_mode.desc": "Switch texture source between custom, official, and vanilla. Drag-and-drop creates a new custom texture file, switches to custom mode, and keeps the original name for display.",
   "gd656killicon.client.gui.help.preset.export": "Exporting and Sharing Presets",
   "gd656killicon.client.gui.help.preset.export.desc": "Click 'Enter Preset Export Mode'. The preset ID button will change to 'Export'. Click it, enter a filename, and the current preset will be packaged into a .gdpack file. The file is saved in the 'config/gd656killicon/export' directory. Others can import it by simply dragging the file into the configuration interface.",
   "gd656killicon.client.gui.help.preset.structure": "Preset File Structure",
