--- a/src/main/resources/assets/gd656killicon/lang/zh_cn.json
+++ b/src/main/resources/assets/gd656killicon/lang/zh_cn.json
@@ -1,5 +1,5 @@
 {
-  "gd656killicon.client.command.info": "当前GD656Killicon 客户端版本: ",
+  "gd656killicon.client.command.info": "当前GD656Killicon 客户端版本: %s",
   "gd656killicon.prefix": "[六五六] ",
   "gd656killicon.server.prefix": "[六五六-服务端] ",
 
@@ -98,6 +98,7 @@
 
   "gd656killicon.client.gui.config.title": "GD656Killicon控制面板",
   "gd656killicon.client.gui.config.subtitle": "By Minecraft_GD656",
+  "gd656killicon.client.gui.choice.select": "选择",
   "gd656killicon.client.gui.config.tab.home": "主页",
   "gd656killicon.client.gui.config.tab.home.subtitle": "模组配置主页",
   "gd656killicon.client.gui.hometab.title": "§lGD656Killicon",
@@ -233,7 +234,11 @@
   "gd656killicon.client.gui.config.generic.display_duration": "显示持续时间",
   "gd656killicon.client.gui.config.generic.display_interval_ms": "显示间隔(毫秒)",
   "gd656killicon.client.gui.config.generic.dynamic_card_style": "根据队伍颜色动态变更卡牌样式",
-  "gd656killicon.client.gui.config.generic.texture_style": "材质样式",
+  "gd656killicon.client.gui.config.generic.texture_style": "官方材质选择",
+  "gd656killicon.client.gui.config.generic.official_texture_select": "官方材质选择",
+  "gd656killicon.client.gui.config.generic.custom_texture_select": "自定义材质选择",
+  "gd656killicon.client.gui.config.generic.texture_select_mode": "材质选择模式",
+  "gd656killicon.client.gui.config.generic.vanilla_texture_select": "原版材质选择",
   "gd656killicon.client.gui.config.generic.enable_digital_scroll": "启用数字滚动",
   "gd656killicon.client.gui.config.generic.enable_flash": "启用闪烁",
   "gd656killicon.client.gui.config.generic.enable_glow_effect": "启用发光效果",
@@ -395,12 +400,14 @@
   "gd656killicon.client.gui.config.global.enable_sound.desc": "启用后，击杀图标显示时将播放特定音效。",
   "gd656killicon.client.gui.config.global.sound_volume": "音效音量大小",
   "gd656killicon.client.gui.config.global.sound_volume.desc": "设置模组音效音量（0~200）。",
+  "gd656killicon.client.gui.config.global.disable_tacz_kill_sound": "是否禁用TACZ原版击杀音效",
+  "gd656killicon.client.gui.config.global.disable_tacz_kill_sound.desc": "启用后，将屏蔽TACZ的击杀音效播放。",
   "gd656killicon.client.gui.config.global.enable_bonus_message": "是否启用加分项提示",
   "gd656killicon.client.gui.config.global.enable_bonus_message.desc": "启用后，当触发加分项（如爆头、助攻等）时，将在聊天框显示详细信息。",
   "gd656killicon.client.gui.config.global.enable_ace_lag": "是否启用ACE扫盘模拟",
   "gd656killicon.client.gui.config.global.enable_ace_lag.desc": "启用后，战斗激烈时会模拟扫盘卡顿效果（帧率降低、短暂卡死）。",
   "gd656killicon.client.gui.config.global.ace_lag_intensity": "ACE卡顿强度",
-  "gd656killicon.client.gui.config.global.ace_lag_intensity.desc": "设置卡顿模拟的强度和频率（1-10），数值越大卡顿越频繁、越严重。",
+  "gd656killicon.client.gui.config.global.ace_lag_intensity.desc": "设置卡顿模拟的强度和频率（1-100），数值越大卡顿越频繁、越严重。",
   "gd656killicon.client.gui.config.preset.create_new": "创建新自定义预设",
   "gd656killicon.client.gui.config.preset.enter_edit_mode": "进入编辑预设模式",
   "gd656killicon.client.gui.config.preset.exit_edit_mode": "退出编辑预设模式",
@@ -446,6 +453,19 @@
   "gd656killicon.client.gui.prompt.warning": "警告",
   "gd656killicon.client.gui.prompt.info": "提示",
   "gd656killicon.client.gui.prompt.language_changed": "检测到您更改了客户端语言，建议对文本格式类配置项进行重置",
+  "gd656killicon.client.gui.prompt.ace_lag_confirm": "过高的值可能导致游戏无法正常游玩，是否确认更改",
+  "gd656killicon.client.gui.prompt.config_intro_1": "感谢安装GD656Killicon，本提示将随操作引导。",
+  "gd656killicon.client.gui.prompt.config_intro_2": "可在屏幕上方快速切换选项卡，模组图标配置在“预设元素配置”。",
+  "gd656killicon.client.gui.prompt.config_intro_3": "此页为配置主页，可查看联动内容与安装状态，右下按钮可直达网站。",
+  "gd656killicon.client.gui.prompt.preset_intro": "此页为预设元素配置页，左侧唤出预设选择，右侧唤出元素选择与音效配置。",
+  "gd656killicon.client.gui.prompt.element_intro": "此为元素配置页，左侧预览实时应用更改，右侧可调整多项配置。",
+  "gd656killicon.client.gui.prompt.element_texture_intro": "非字幕类元素可在右侧上方切换材质页，拖入PNG或GIF自定义材质或动画。",
+  "gd656killicon.client.gui.prompt.sound_intro": "此为音效配置页，选中音效可对其进行预览试听或点击灰色文件名修改音频",
+  "gd656killicon.client.gui.prompt.sound_select_intro": "请选择一个官方音效或向游戏窗口拖入OGG或WAV文件对音效进行定制",
+  "gd656killicon.client.gui.prompt.version_updated": "GD656Killicon已升级至\n%s",
+  "gd656killicon.client.gui.prompt.version_confirm": "确认修改",
+  "gd656killicon.client.gui.prompt.version_view": "查看更新内容",
+  "gd656killicon.client.gui.prompt.scoreboard_intro": "此页为分数榜单页：左侧记录生涯数据；右侧显示服务器分数与KDA，表头左右键可升/降序排序。",
   "gd656killicon.client.gui.prompt.error": "错误",
   "gd656killicon.client.gui.prompt.success": "成功",
   "gd656killicon.client.gui.prompt.sound_replace_success": "音效替换成功",
@@ -460,6 +480,8 @@
   "gd656killicon.client.gui.prompt.gif_convert_fail": "GIF转换失败",
 
   "gd656killicon.client.command.create_success": "预设 %s 已创建",
+  "gd656killicon.client.command.iamanew": "已切换为全新模式，提示将重新显示",
+  "gd656killicon.client.command.versionset": "已设置记录的模组版本为 %s",
   "gd656killicon.client.command.global_config_invalid_key": "无效的全局配置项: %s",
   "gd656killicon.client.command.global_config_invalid_value": "无效的配置值: %s",
   "gd656killicon.client.command.global_config_updated": "全局配置已更新: %s = %s",
@@ -584,6 +606,40 @@
   "gd656killicon.client.sound.reset_progress": "正在重置音效 (%d/%d)",
   "gd656killicon.client.sound.reset_start": "开始异步重置音效...",
   "gd656killicon.client.sound.reset_success": "预设 %s 的音效已重置",
+  "gd656killicon.client.gui.config.sound.group.common": "通用音效",
+  "gd656killicon.client.gui.config.sound.group.scrolling": "滚动击杀图标元素音效",
+  "gd656killicon.client.gui.config.sound.group.battlefield1": "战地一击杀图标元素音效",
+  "gd656killicon.client.gui.config.sound.group.card": "卡牌击杀图标元素音效",
+  "gd656killicon.client.gui.config.sound.group.combo": "连杀击杀图标元素音效",
+  "gd656killicon.client.gui.config.sound.select.title": "音效选择",
+  "gd656killicon.client.gui.config.sound.select.subtitle": "请选择一个音效以修改目标音效",
+  "gd656killicon.client.gui.config.sound.select": "选择",
+  "gd656killicon.client.gui.config.sound.select.selected": "已选择",
+  "gd656killicon.client.gui.config.sound.select.hover": "点击以选择音效",
+  "gd656killicon.client.gui.config.sound.select.group.official": "官方音频",
+  "gd656killicon.client.gui.config.sound.select.group.custom": "自定义音频",
+  "gd656killicon.client.gui.config.sound.reset_current": "重置当前音效到默认值",
+  "gd656killicon.client.gui.config.sound.subgroup.common.score": "加分音效",
+  "gd656killicon.client.gui.config.sound.subgroup.common.hit": "伤害音效",
+  "gd656killicon.client.gui.config.sound.subgroup.scrolling.default": "普通音效",
+  "gd656killicon.client.gui.config.sound.subgroup.scrolling.headshot": "爆头音效",
+  "gd656killicon.client.gui.config.sound.subgroup.scrolling.explosion": "爆炸音效",
+  "gd656killicon.client.gui.config.sound.subgroup.scrolling.crit": "暴击音效",
+  "gd656killicon.client.gui.config.sound.subgroup.scrolling.vehicle": "载具摧毁音效",
+  "gd656killicon.client.gui.config.sound.subgroup.scrolling.assist": "助攻音效",
+  "gd656killicon.client.gui.config.sound.subgroup.bf1.default": "普通音效",
+  "gd656killicon.client.gui.config.sound.subgroup.bf1.headshot": "爆头音效",
+  "gd656killicon.client.gui.config.sound.subgroup.card.default": "普通音效",
+  "gd656killicon.client.gui.config.sound.subgroup.card.headshot": "爆头音效",
+  "gd656killicon.client.gui.config.sound.subgroup.card.explosion": "爆炸音效",
+  "gd656killicon.client.gui.config.sound.subgroup.card.crit": "暴击音效",
+  "gd656killicon.client.gui.config.sound.subgroup.card.armor_headshot": "护甲爆头音效",
+  "gd656killicon.client.gui.config.sound.subgroup.combo.1": "1连杀音效",
+  "gd656killicon.client.gui.config.sound.subgroup.combo.2": "2连杀音效",
+  "gd656killicon.client.gui.config.sound.subgroup.combo.3": "3连杀音效",
+  "gd656killicon.client.gui.config.sound.subgroup.combo.4": "4连杀音效",
+  "gd656killicon.client.gui.config.sound.subgroup.combo.5": "5连杀音效",
+  "gd656killicon.client.gui.config.sound.subgroup.combo.6": "6连杀音效",
 
   "gd656killicon.client.texture.reload_progress": "正在加载材质 (%d/%d)",
   "gd656killicon.client.texture.reload_start": "开始异步重载材质...",
@@ -651,7 +707,18 @@
   "gd656killicon.config.desc.combo_reset_timeout": "当选择'自定义时长'时，超过此时间未击杀/助攻将重置对应连杀数。",
   "gd656killicon.config.desc.enable_bold": "是否开启文本粗体渲染。",
   "gd656killicon.config.desc.enable_light_effect": "启用字幕入场时的光条扫描特效。",
-  "gd656killicon.config.desc.texture_style": "选择此材质选项卡使用的默认贴图。",
+  "gd656killicon.config.desc.texture_style": "选择此材质页使用的官方贴图文件。",
+  "gd656killicon.config.desc.official_texture_select": "选择此材质页使用的官方贴图文件。",
+  "gd656killicon.config.desc.custom_texture_select": "选择此材质页使用的自定义贴图文件。",
+  "gd656killicon.config.desc.texture_select_mode": "选择材质来源模式。",
+  "gd656killicon.config.desc.vanilla_texture_select": "选择原版物品贴图。",
+  "gd656killicon.config.choice.texture_mode.custom": "自定义材质",
+  "gd656killicon.config.choice.texture_mode.official": "官方材质",
+  "gd656killicon.config.choice.texture_mode.vanilla": "原版材质",
+  "gd656killicon.client.gui.config.choice.custom_texture_none": "暂无自定义材质",
+  "gd656killicon.client.gui.prompt.texture_binding_png": "当前材质绑定已更改，是否重置动画配置？",
+  "gd656killicon.client.gui.prompt.texture_binding_gif": "当前材质绑定已更改，是否重新配置动画设置？",
+  "gd656killicon.client.gui.prompt.texture_unavailable": "此贴图暂不可用。",
   "gd656killicon.config.desc.color_normal_text": "设置非占位符等常规文本的字幕颜色。",
 
   "gd656killicon.client.gui.help.category.commands": "服务端指令",
@@ -696,7 +763,9 @@
   "gd656killicon.client.gui.help.preset.create": "创建自定义预设",
   "gd656killicon.client.gui.help.preset.create.desc": "点击列表底部的“创建新自定义预设”按钮，系统会自动生成一个新的预设ID并选中它。您可以在此基础上进行个性化配置。",
   "gd656killicon.client.gui.help.preset.edit": "编辑预设与元素",
-  "gd656killicon.client.gui.help.preset.edit.desc": "点击“进入编辑预设模式”：\n1. 对于自定义预设：将鼠标悬停在ID可选择编辑ID或删除预设；悬停在名称上可选择重命名。\n2. 官方预设：悬停ID可选择重置配置、材质或音效。\n\n元素管理（右侧面板）：\n将鼠标移动到屏幕右侧边缘展开元素控制页。点击“添加”按钮可为当前预设增加新元素（如击杀图标、字幕等）。添加完成后双击元素预览框或点击配置按钮可进入元素配置界面，可在二级选项卡中选择一个材质，直接将您自己的PNG文件或GIF动图拖入此窗口以进行材质的自定义；点击“配置音效”可管理当前预设的自定义音效，音效仅支持WAV与OGG格式。",
+  "gd656killicon.client.gui.help.preset.edit.desc": "点击“进入编辑预设模式”：\n1. 对于自定义预设：将鼠标悬停在ID可选择编辑ID或删除预设；悬停在名称上可选择重命名。\n2. 官方预设：悬停ID可选择重置配置、材质或音效。\n\n元素管理（右侧面板）：\n将鼠标移动到屏幕右侧边缘展开元素控制页。点击“添加”按钮可为当前预设增加新元素（如击杀图标、字幕等）。添加完成后双击元素预览框或点击配置按钮可进入元素配置界面，可在二级选项卡中选择一个材质，直接将您自己的PNG文件或GIF动图拖入此窗口以进行材质的自定义；点击“配置音效”进入音效列表后，点击某个音效行进入选择页面，在该页面拖入WAV或OGG文件以新增自定义音频并点击“选择”应用。",
+  "gd656killicon.client.gui.help.preset.texture_select_mode": "材质选择模式",
+  "gd656killicon.client.gui.help.preset.texture_select_mode.desc": "可在自定义、官方、原版之间切换。拖入文件会生成新的自定义材质文件并自动切换为自定义模式，同时保留原始文件名显示。",
   "gd656killicon.client.gui.help.preset.export": "导出与分享预设",
   "gd656killicon.client.gui.help.preset.export.desc": "点击“进入导出预设模式”，预设ID栏会变为“导出”按钮。点击后输入文件名，即可将当前预设打包为.gdpack文件。文件保存在config/gd656killicon/export目录下。他人只需将该文件拖入配置界面即可导入。",
   "gd656killicon.client.gui.help.preset.structure": "预设文件结构",
