--- a/src/main/resources/assets/gd656killicon/lang/zh_tw.json
+++ b/src/main/resources/assets/gd656killicon/lang/zh_tw.json
@@ -1,5 +1,5 @@
 {
-  "gd656killicon.client.command.info": "當前GD656Killicon 客戶端版本: ",
+  "gd656killicon.client.command.info": "當前GD656Killicon 客戶端版本: %s",
   "gd656killicon.prefix": "[六五六] ",
   "gd656killicon.server.prefix": "[六五六-服務端] ",
 
@@ -98,6 +98,7 @@
 
   "gd656killicon.client.gui.config.title": "GD656Killicon控制面板",
   "gd656killicon.client.gui.config.subtitle": "By Minecraft_GD656",
+  "gd656killicon.client.gui.choice.select": "選擇",
   "gd656killicon.client.gui.config.tab.home": "主頁",
   "gd656killicon.client.gui.config.tab.home.subtitle": "模組配置主頁",
   "gd656killicon.client.gui.hometab.title": "§lGD656Killicon",
@@ -233,7 +234,11 @@
   "gd656killicon.client.gui.config.generic.display_duration": "顯示持續時間",
   "gd656killicon.client.gui.config.generic.display_interval_ms": "顯示間隔(毫秒)",
   "gd656killicon.client.gui.config.generic.dynamic_card_style": "根據隊伍顏色動態變更卡牌樣式",
-  "gd656killicon.client.gui.config.generic.texture_style": "材質樣式",
+  "gd656killicon.client.gui.config.generic.texture_style": "官方材質選擇",
+  "gd656killicon.client.gui.config.generic.official_texture_select": "官方材質選擇",
+  "gd656killicon.client.gui.config.generic.custom_texture_select": "自訂材質選擇",
+  "gd656killicon.client.gui.config.generic.texture_select_mode": "材質選擇模式",
+  "gd656killicon.client.gui.config.generic.vanilla_texture_select": "原版材質選擇",
   "gd656killicon.client.gui.config.generic.enable_digital_scroll": "啟用數字滾動",
   "gd656killicon.client.gui.config.generic.enable_flash": "啟用閃爍",
   "gd656killicon.client.gui.config.generic.enable_glow_effect": "啟用發光效果",
@@ -395,12 +400,14 @@
   "gd656killicon.client.gui.config.global.enable_sound.desc": "啟用後，擊殺圖示顯示時將播放特定音效。",
   "gd656killicon.client.gui.config.global.sound_volume": "音效音量大小",
   "gd656killicon.client.gui.config.global.sound_volume.desc": "設定模組音效音量（0~200）。",
+  "gd656killicon.client.gui.config.global.disable_tacz_kill_sound": "是否禁用TACZ原版擊殺音效",
+  "gd656killicon.client.gui.config.global.disable_tacz_kill_sound.desc": "啟用後，將屏蔽TACZ的擊殺音效播放。",
   "gd656killicon.client.gui.config.global.enable_bonus_message": "是否啟用加分項提示",
   "gd656killicon.client.gui.config.global.enable_bonus_message.desc": "啟用後，當觸發加分項（如爆頭、助攻等）時，將在聊天框顯示詳細資訊。",
   "gd656killicon.client.gui.config.global.enable_ace_lag": "是否啟用ACE掃盤模擬",
   "gd656killicon.client.gui.config.global.enable_ace_lag.desc": "啟用後，戰鬥激烈時會模擬掃盤卡頓效果（幀率降低、短暫卡死）。",
   "gd656killicon.client.gui.config.global.ace_lag_intensity": "ACE卡頓強度",
-  "gd656killicon.client.gui.config.global.ace_lag_intensity.desc": "設定卡頓模擬的強度和頻率（1-10），數值越大卡頓越頻繁、越嚴重。",
+  "gd656killicon.client.gui.config.global.ace_lag_intensity.desc": "設定卡頓模擬的強度和頻率（1-100），數值越大卡頓越頻繁、越嚴重。",
   "gd656killicon.client.gui.config.preset.create_new": "建立新自訂預設",
   "gd656killicon.client.gui.config.preset.enter_edit_mode": "進入編輯預設模式",
   "gd656killicon.client.gui.config.preset.exit_edit_mode": "退出編輯預設模式",
@@ -446,6 +453,19 @@
   "gd656killicon.client.gui.prompt.warning": "警告",
   "gd656killicon.client.gui.prompt.info": "提示",
   "gd656killicon.client.gui.prompt.language_changed": "偵測到您更改了用戶端語言，建議對文字格式類配置項進行重設",
+  "gd656killicon.client.gui.prompt.ace_lag_confirm": "過高的數值可能導致遊戲無法正常遊玩，是否確認更改",
+  "gd656killicon.client.gui.prompt.config_intro_1": "感謝安裝GD656Killicon，本提示將隨操作引導。",
+  "gd656killicon.client.gui.prompt.config_intro_2": "可在螢幕上方快速切換選項卡，模組圖示配置在「預設元素配置」。",
+  "gd656killicon.client.gui.prompt.config_intro_3": "此頁為配置首頁，可查看聯動內容與安裝狀態，右下按鈕可直達網站。",
+  "gd656killicon.client.gui.prompt.preset_intro": "此頁為預設元素配置頁，左側喚出預設選擇，右側喚出元素選擇與音效配置。",
+  "gd656killicon.client.gui.prompt.element_intro": "此為元素配置頁，左側預覽即時套用更改，右側可調整多項配置。",
+  "gd656killicon.client.gui.prompt.element_texture_intro": "非字幕類元素可在右側上方切換材質頁，拖入PNG或GIF自訂材質或動畫。",
+  "gd656killicon.client.gui.prompt.sound_intro": "此為音效配置頁，選中音效可對其進行預覽試聽或點擊灰色檔名修改音訊",
+  "gd656killicon.client.gui.prompt.sound_select_intro": "請選擇一個官方音效或向遊戲視窗拖入OGG或WAV檔對音效進行自訂",
+  "gd656killicon.client.gui.prompt.version_updated": "GD656Killicon已升級至\n%s",
+  "gd656killicon.client.gui.prompt.version_confirm": "確認修改",
+  "gd656killicon.client.gui.prompt.version_view": "查看更新內容",
+  "gd656killicon.client.gui.prompt.scoreboard_intro": "此頁為分數榜單頁：左側記錄生涯數據；右側顯示伺服器分數與KDA，表頭左右鍵可升/降序排序。",
   "gd656killicon.client.gui.prompt.error": "錯誤",
   "gd656killicon.client.gui.prompt.success": "成功",
   "gd656killicon.client.gui.prompt.sound_replace_success": "音效替換成功",
@@ -460,6 +480,9 @@
   "gd656killicon.client.gui.prompt.gif_convert_fail": "GIF轉換失敗",
 
   "gd656killicon.client.command.create_success": "預設 %s 已建立",
+  "gd656killicon.client.command.iamanew": "已切換為全新模式，提示將重新顯示",
+  "gd656killicon.client.command.versionset": "已設定記錄的模組版本為 %s",
+  "gd656killicon.client.command.versionset": "已設定記錄的模組版本為 %s",
   "gd656killicon.client.command.global_config_invalid_key": "無效的全域配置項: %s",
   "gd656killicon.client.command.global_config_invalid_value": "無效的配置值: %s",
   "gd656killicon.client.command.global_config_updated": "全域配置已更新: %s = %s",
@@ -584,6 +607,40 @@
   "gd656killicon.client.sound.reset_progress": "正在重設音效 (%d/%d)",
   "gd656killicon.client.sound.reset_start": "開始非同步重設音效...",
   "gd656killicon.client.sound.reset_success": "預設 %s 的音效已重設",
+  "gd656killicon.client.gui.config.sound.group.common": "通用音效",
+  "gd656killicon.client.gui.config.sound.group.scrolling": "滾動擊殺圖示元素音效",
+  "gd656killicon.client.gui.config.sound.group.battlefield1": "戰地一擊殺圖示元素音效",
+  "gd656killicon.client.gui.config.sound.group.card": "卡牌擊殺圖示元素音效",
+  "gd656killicon.client.gui.config.sound.group.combo": "連殺擊殺圖示元素音效",
+  "gd656killicon.client.gui.config.sound.select.title": "音效選擇",
+  "gd656killicon.client.gui.config.sound.select.subtitle": "請選擇一個音效以修改目標音效",
+  "gd656killicon.client.gui.config.sound.select": "選擇",
+  "gd656killicon.client.gui.config.sound.select.selected": "已選擇",
+  "gd656killicon.client.gui.config.sound.select.hover": "點擊以選擇音效",
+  "gd656killicon.client.gui.config.sound.select.group.official": "官方音訊",
+  "gd656killicon.client.gui.config.sound.select.group.custom": "自訂音訊",
+  "gd656killicon.client.gui.config.sound.reset_current": "重置目前音效到預設值",
+  "gd656killicon.client.gui.config.sound.subgroup.common.score": "加分音效",
+  "gd656killicon.client.gui.config.sound.subgroup.common.hit": "傷害音效",
+  "gd656killicon.client.gui.config.sound.subgroup.scrolling.default": "普通音效",
+  "gd656killicon.client.gui.config.sound.subgroup.scrolling.headshot": "爆頭音效",
+  "gd656killicon.client.gui.config.sound.subgroup.scrolling.explosion": "爆炸音效",
+  "gd656killicon.client.gui.config.sound.subgroup.scrolling.crit": "暴擊音效",
+  "gd656killicon.client.gui.config.sound.subgroup.scrolling.vehicle": "載具摧毀音效",
+  "gd656killicon.client.gui.config.sound.subgroup.scrolling.assist": "助攻音效",
+  "gd656killicon.client.gui.config.sound.subgroup.bf1.default": "普通音效",
+  "gd656killicon.client.gui.config.sound.subgroup.bf1.headshot": "爆頭音效",
+  "gd656killicon.client.gui.config.sound.subgroup.card.default": "普通音效",
+  "gd656killicon.client.gui.config.sound.subgroup.card.headshot": "爆頭音效",
+  "gd656killicon.client.gui.config.sound.subgroup.card.explosion": "爆炸音效",
+  "gd656killicon.client.gui.config.sound.subgroup.card.crit": "暴擊音效",
+  "gd656killicon.client.gui.config.sound.subgroup.card.armor_headshot": "護甲爆頭音效",
+  "gd656killicon.client.gui.config.sound.subgroup.combo.1": "1連殺音效",
+  "gd656killicon.client.gui.config.sound.subgroup.combo.2": "2連殺音效",
+  "gd656killicon.client.gui.config.sound.subgroup.combo.3": "3連殺音效",
+  "gd656killicon.client.gui.config.sound.subgroup.combo.4": "4連殺音效",
+  "gd656killicon.client.gui.config.sound.subgroup.combo.5": "5連殺音效",
+  "gd656killicon.client.gui.config.sound.subgroup.combo.6": "6連殺音效",
 
   "gd656killicon.client.texture.reload_progress": "正在載入材質 (%d/%d)",
   "gd656killicon.client.texture.reload_start": "開始非同步重新載入材質...",
@@ -651,7 +708,18 @@
   "gd656killicon.config.desc.combo_reset_timeout": "當選擇'自訂時長'時，超過此時間未擊殺/助攻將重置對應連殺數。",
   "gd656killicon.config.desc.enable_bold": "是否開啟文字粗體渲染。",
   "gd656killicon.config.desc.enable_light_effect": "啟用字幕入場時的光條掃描特效。",
-  "gd656killicon.config.desc.texture_style": "選擇此材質頁籤使用的預設貼圖。",
+  "gd656killicon.config.desc.texture_style": "選擇此材質頁使用的官方貼圖檔案。",
+  "gd656killicon.config.desc.official_texture_select": "選擇此材質頁使用的官方貼圖檔案。",
+  "gd656killicon.config.desc.custom_texture_select": "選擇此材質頁使用的自訂貼圖檔案。",
+  "gd656killicon.config.desc.texture_select_mode": "選擇材質來源模式。",
+  "gd656killicon.config.desc.vanilla_texture_select": "選擇原版物品貼圖。",
+  "gd656killicon.config.choice.texture_mode.custom": "自訂材質",
+  "gd656killicon.config.choice.texture_mode.official": "官方材質",
+  "gd656killicon.config.choice.texture_mode.vanilla": "原版材質",
+  "gd656killicon.client.gui.config.choice.custom_texture_none": "暫無自訂材質",
+  "gd656killicon.client.gui.prompt.texture_binding_png": "目前材質綁定已變更，是否重置動畫設定？",
+  "gd656killicon.client.gui.prompt.texture_binding_gif": "目前材質綁定已變更，是否重新設定動畫？",
+  "gd656killicon.client.gui.prompt.texture_unavailable": "此貼圖暫不可用。",
   "gd656killicon.config.desc.color_normal_text": "設定非佔位符等常規文字的字幕顏色。",
 
   "gd656killicon.client.gui.help.category.commands": "伺服端指令",
@@ -696,7 +764,9 @@
   "gd656killicon.client.gui.help.preset.create": "建立自訂預設",
   "gd656killicon.client.gui.help.preset.create.desc": "點擊清單底部的「建立新自訂預設」按鈕，系統會自動產生一個新的預設ID並選中它。您可以在此基礎上進行個人化配置。",
   "gd656killicon.client.gui.help.preset.edit": "編輯預設與元素",
-  "gd656killicon.client.gui.help.preset.edit.desc": "點擊「進入編輯預設模式」：\n1. 對於自訂預設：將滑鼠懸停在ID可選擇編輯ID或刪除預設；懸停在名稱上可選擇重新命名。\n2. 官方預設：懸停ID可選擇重置配置、材質或音效。\n\n元素管理（右側面板）：\n將滑鼠移動到畫面右側邊緣展開元素控制頁。點擊「新增」按鈕可為目前預設增加新元素（如擊殺圖示、字幕等）。新增完成後雙擊元素預覽框或點擊配置按鈕可進入元素配置介面，可在二級頁籤中選擇一個材質，直接將您自己的PNG檔案或GIF動圖拖入此視窗以進行材質的自訂；點擊「配置音效」可管理目前預設的自訂音效，音效僅支援WAV與OGG格式。",
+  "gd656killicon.client.gui.help.preset.edit.desc": "點擊「進入編輯預設模式」：\n1. 對於自訂預設：將滑鼠懸停在ID可選擇編輯ID或刪除預設；懸停在名稱上可選擇重新命名。\n2. 官方預設：懸停ID可選擇重置配置、材質或音效。\n\n元素管理（右側面板）：\n將滑鼠移動到畫面右側邊緣展開元素控制頁。點擊「新增」按鈕可為目前預設增加新元素（如擊殺圖示、字幕等）。新增完成後雙擊元素預覽框或點擊配置按鈕可進入元素配置介面，可在二級頁籤中選擇一個材質，直接將您自己的PNG檔案或GIF動圖拖入此視窗以進行材質的自訂；點擊「配置音效」進入音效列表後，點擊音效行進入選擇頁面，在該頁拖入WAV或OGG檔以新增自訂音訊並點擊「選擇」套用。",
+  "gd656killicon.client.gui.help.preset.texture_select_mode": "材質選擇模式",
+  "gd656killicon.client.gui.help.preset.texture_select_mode.desc": "可在自訂、官方、原版之間切換。拖入檔案會建立新的自訂材質檔並自動切換為自訂模式，同時保留原始檔名顯示。",
   "gd656killicon.client.gui.help.preset.export": "匯出與分享預設",
   "gd656killicon.client.gui.help.preset.export.desc": "點擊「進入匯出預設模式」，預設ID欄會變為「匯出」按鈕。點擊後輸入檔名，即可將目前預設打包為.gdpack檔案。檔案儲存在config/gd656killicon/export目錄下。他人只需將該檔案拖入配置介面即可匯入。",
   "gd656killicon.client.gui.help.preset.structure": "預設檔案結構",
